[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hack_Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/TitleMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 1, 0.152941, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.580392, 0.109804, 0.109804, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.247059, 0.117647, 0.0784314, 0.780392 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.321569, 0.313726, 0.313726, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.247059, 0.117647, 0.0784314, 0.780392 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.321569, 0.313726, 0.313726, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.129412, 0.243137, 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
text = "Lava Chess"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_right = 256.0
margin_bottom = 112.0
custom_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 93.0
margin_right = 157.0
margin_bottom = 112.0
rect_min_size = Vector2( 64, 0 )

[node name="HotseatButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_colors/font_color = Color( 0.517647, 0.988235, 1, 1 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
text = "Hotseat"

[node name="AIButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 64.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
custom_colors/font_color = Color( 0.517647, 0.988235, 1, 1 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
disabled = true
shortcut_in_tooltip = false
text = "vs AI"

[node name="P2PButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 24 )
custom_colors/font_color = Color( 0.517647, 0.988235, 1, 1 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
disabled = true
shortcut_in_tooltip = false
text = "vs Player"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 167.0
margin_right = 291.0
margin_bottom = 112.0
rect_min_size = Vector2( 64, 0 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 124.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "Get it?"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 124.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
text = "Under Construction"
align = 1
valign = 1

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 124.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 24 )
text = "Under Construction"
align = 1
valign = 1

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HotseatButton" to="." method="_on_HotseatButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AIButton" to="." method="_on_AIButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/P2PButton" to="." method="_on_P2PButton_pressed"]
